[gd_scene load_steps=4 format=3 uid="uid://ngwm4vqqg8my"]

[ext_resource type="Texture2D" uid="uid://ccdl3d10pmgei" path="res://Assets/Images/1_generic_comic_book.png" id="1_kq13u"]
[ext_resource type="Script" uid="uid://c3luc6e2jyy4o" path="res://Scripts/main_menu.gd" id="1_s1ljv"]
[ext_resource type="Theme" uid="uid://bx4l8lfeug8r" path="res://godot_fps.tres" id="1_upbr2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s1ljv")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kq13u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="TitleVbox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/TitleVbox"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_upbr2")
theme_override_font_sizes/font_size = 64
text = "Godot Open Source FPS"
horizontal_alignment = 1

[node name="Credits" type="Label" parent="MarginContainer/TitleVbox"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_upbr2")
theme_override_font_sizes/font_size = 32
text = "Created by Bearlikelion"
horizontal_alignment = 1

[node name="StatsVbox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StatsLabel" type="Label" parent="MarginContainer/StatsVbox"]
layout_mode = 2
theme = ExtResource("1_upbr2")
text = "Save File Stats"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/StatsVbox"]
layout_mode = 2

[node name="KillStat" type="HBoxContainer" parent="MarginContainer/StatsVbox"]
layout_mode = 2

[node name="KillsLabel" type="Label" parent="MarginContainer/StatsVbox/KillStat"]
layout_mode = 2
theme = ExtResource("1_upbr2")
text = "Kills: "

[node name="KillsValue" type="Label" parent="MarginContainer/StatsVbox/KillStat"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_upbr2")
text = "0"
horizontal_alignment = 2

[node name="RunStat" type="HBoxContainer" parent="MarginContainer/StatsVbox"]
layout_mode = 2

[node name="RunsLabel" type="Label" parent="MarginContainer/StatsVbox/RunStat"]
layout_mode = 2
theme = ExtResource("1_upbr2")
text = "Runs:"

[node name="RunsValue" type="Label" parent="MarginContainer/StatsVbox/RunStat"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_upbr2")
text = "0"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("1_upbr2")
theme_override_font_sizes/font_size = 64
text = "Play Game"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("1_upbr2")
text = "Quit Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
